crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__impl_trait_param.snap
---
source: crates/wx-compiler/src/ast/tests.rs
assertion_line: 195
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Function:
          id: 0
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 7
            type_params: []
            params:
              - inner:
                  inner:
                    mut_span: ~
                    name:
                      inner: 2
                      span:
                        start: 8
                        end: 11
                    ty:
                      inner:
                        ImplTrait:
                          name:
                            inner: 3
                            span:
                              start: 18
                              end: 26
                      span:
                        start: 13
                        end: 26
                  span:
                    start: 8
                    end: 26
                separator:
                  start: 26
                  end: 27
              - inner:
                  inner:
                    mut_span: ~
                    name:
                      inner: 4
                      span:
                        start: 28
                        end: 33
                    ty:
                      inner:
                        Identifier:
                          symbol: 5
                      span:
                        start: 35
                        end: 38
                  span:
                    start: 28
                    end: 38
                separator: ~
            result:
              inner:
                Identifier:
                  symbol: 5
              span:
                start: 43
                end: 46
          block:
            inner:
              Block:
                statements:
                  - inner:
                      inner:
                        Expression:
                          inner:
                            Identifier:
                              symbol: 4
                          span:
                            start: 53
                            end: 58
                      span:
                        start: 53
                        end: 58
                    separator: ~
            span:
              start: 47
              end: 60
      span:
        start: 0
        end: 60
    separator: ~
