crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__incomplete_expression.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics:
  - severity: Error
    code: E0006
    message: incomplete binary expression
    labels:
      - style: Primary
        file_id: 0
        range:
          start: 23
          end: 24
        message: ""
      - style: Secondary
        file_id: 0
        range:
          start: 23
          end: 24
        message: consider adding a right-hand side operand
    notes: []
  - severity: Error
    code: E0006
    message: incomplete unary expression
    labels:
      - style: Primary
        file_id: 0
        range:
          start: 48
          end: 49
        message: ""
      - style: Secondary
        file_id: 0
        range:
          start: 48
          end: 49
        message: consider adding an operand
    notes: []
items:
  - inner:
      inner:
        Function:
          id: 0
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 9
            type_params: []
            params:
              open:
                start: 9
                end: 10
              inner: []
              close:
                start: 10
                end: 11
            result:
              inner:
                Identifier:
                  symbol: 2
              span:
                start: 15
                end: 18
          block:
            inner:
              Block:
                statements:
                  open:
                    start: 19
                    end: 20
                  inner: []
                  close:
                    start: 25
                    end: 26
            span:
              start: 19
              end: 26
      span:
        start: 0
        end: 26
    separator: ~
  - inner:
      inner:
        Function:
          id: 1
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 3
              span:
                start: 30
                end: 35
            type_params: []
            params:
              open:
                start: 35
                end: 36
              inner: []
              close:
                start: 36
                end: 37
            result:
              inner:
                Identifier:
                  symbol: 2
              span:
                start: 42
                end: 45
          block:
            inner:
              Block:
                statements:
                  open:
                    start: 46
                    end: 47
                  inner: []
                  close:
                    start: 52
                    end: 53
            span:
              start: 46
              end: 53
      span:
        start: 27
        end: 53
    separator: ~
