crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__literals.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Function:
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 4
            params:
              open:
                start: 4
                end: 5
              inner: []
              close:
                start: 5
                end: 6
            result: ~
          block:
            inner:
              Block:
                statements:
                  open:
                    start: 7
                    end: 8
                  inner:
                    - inner:
                        inner:
                          LocalDefinition:
                            mut_span: ~
                            name:
                              inner: 2
                              span:
                                start: 19
                                end: 20
                            ty: ~
                            value:
                              inner:
                                Float:
                                  value: 3.14
                              span:
                                start: 23
                                end: 27
                        span:
                          start: 13
                          end: 27
                      separator:
                        start: 27
                        end: 28
                    - inner:
                        inner:
                          LocalDefinition:
                            mut_span: ~
                            name:
                              inner: 3
                              span:
                                start: 39
                                end: 40
                            ty: ~
                            value:
                              inner:
                                Char:
                                  symbol: 4
                              span:
                                start: 43
                                end: 46
                        span:
                          start: 33
                          end: 46
                      separator:
                        start: 46
                        end: 47
                    - inner:
                        inner:
                          LocalDefinition:
                            mut_span: ~
                            name:
                              inner: 5
                              span:
                                start: 58
                                end: 59
                            ty: ~
                            value:
                              inner:
                                String:
                                  symbol: 6
                              span:
                                start: 62
                                end: 69
                        span:
                          start: 52
                          end: 69
                      separator:
                        start: 69
                        end: 70
                  close:
                    start: 71
                    end: 72
            span:
              start: 7
              end: 72
      span:
        start: 0
        end: 72
    separator: ~
