crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__loop_break_label.snap
---
source: crates/wx-compiler/src/ast/tests.rs
assertion_line: 352
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Function:
          id: 0
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 17
            type_params: []
            params:
              - inner:
                  inner:
                    mut_span:
                      start: 18
                      end: 21
                    name:
                      inner: 2
                      span:
                        start: 22
                        end: 23
                    ty:
                      inner:
                        Identifier:
                          symbol: 3
                      span:
                        start: 25
                        end: 28
                  span:
                    start: 22
                    end: 28
                separator: ~
            result:
              inner:
                Identifier:
                  symbol: 3
              span:
                start: 33
                end: 36
          block:
            inner:
              Block:
                statements:
                  - inner:
                      inner:
                        Expression:
                          inner:
                            Label:
                              label:
                                inner: 4
                                span:
                                  start: 43
                                  end: 49
                              block:
                                inner:
                                  Loop:
                                    block:
                                      inner:
                                        Block:
                                          statements:
                                            - inner:
                                                inner:
                                                  Expression:
                                                    inner:
                                                      IfElse:
                                                        condition:
                                                          inner:
                                                            Binary:
                                                              left:
                                                                inner:
                                                                  Identifier:
                                                                    symbol: 2
                                                                span:
                                                                  start: 69
                                                                  end: 70
                                                              operator:
                                                                inner: Greater
                                                                span:
                                                                  start: 71
                                                                  end: 72
                                                              right:
                                                                inner:
                                                                  Int:
                                                                    value: 0
                                                                span:
                                                                  start: 73
                                                                  end: 74
                                                          span:
                                                            start: 69
                                                            end: 74
                                                        then_block:
                                                          inner:
                                                            Block:
                                                              statements:
                                                                - inner:
                                                                    inner:
                                                                      Expression:
                                                                        inner:
                                                                          Break:
                                                                            label:
                                                                              inner: 4
                                                                              span:
                                                                                start: 96
                                                                                end: 102
                                                                            value:
                                                                              inner:
                                                                                Identifier:
                                                                                  symbol: 2
                                                                              span:
                                                                                start: 103
                                                                                end: 104
                                                                        span:
                                                                          start: 89
                                                                          end: 104
                                                                    span:
                                                                      start: 89
                                                                      end: 104
                                                                  separator:
                                                                    start: 104
                                                                    end: 105
                                                          span:
                                                            start: 75
                                                            end: 115
                                                        else_block: ~
                                                    span:
                                                      start: 66
                                                      end: 115
                                                span:
                                                  start: 66
                                                  end: 115
                                              separator: ~
                                            - inner:
                                                inner:
                                                  Expression:
                                                    inner:
                                                      Binary:
                                                        left:
                                                          inner:
                                                            Identifier:
                                                              symbol: 2
                                                          span:
                                                            start: 124
                                                            end: 125
                                                        operator:
                                                          inner: AddAssign
                                                          span:
                                                            start: 126
                                                            end: 128
                                                        right:
                                                          inner:
                                                            Int:
                                                              value: 1
                                                          span:
                                                            start: 129
                                                            end: 130
                                                    span:
                                                      start: 124
                                                      end: 130
                                                span:
                                                  start: 124
                                                  end: 130
                                              separator:
                                                start: 130
                                                end: 131
                                            - inner:
                                                inner:
                                                  Expression:
                                                    inner:
                                                      Continue:
                                                        label: ~
                                                    span:
                                                      start: 140
                                                      end: 148
                                                span:
                                                  start: 140
                                                  end: 148
                                              separator:
                                                start: 148
                                                end: 149
                                      span:
                                        start: 56
                                        end: 155
                                span:
                                  start: 51
                                  end: 155
                          span:
                            start: 43
                            end: 155
                      span:
                        start: 43
                        end: 155
                    separator: ~
            span:
              start: 37
              end: 157
      span:
        start: 0
        end: 157
    separator: ~
