crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__memory.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Memory:
          name:
            inner: 1
            span:
              start: 7
              end: 10
          kind:
            inner:
              Identifier:
                symbol: 2
            span:
              start: 12
              end: 20
      span:
        start: 0
        end: 20
    separator:
      start: 20
      end: 21
