crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__missing_initializer.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics:
  - severity: Error
    code: E0010
    message: missing initial value for local variable
    labels:
      - style: Primary
        file_id: 0
        range:
          start: 26
          end: 27
        message: ""
    notes:
      - "example syntax: local x: i32 = 0"
  - severity: Error
    code: E0010
    message: missing initial value for global variable
    labels:
      - style: Primary
        file_id: 0
        range:
          start: 42
          end: 42
        message: ""
    notes:
      - "example syntax: global x: i32 = 0"
items:
  - inner:
      inner:
        Function:
          id: 0
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 4
            params:
              open:
                start: 4
                end: 5
              inner: []
              close:
                start: 5
                end: 6
            result: ~
          block:
            inner:
              Block:
                statements:
                  open:
                    start: 7
                    end: 8
                  inner: []
                  close:
                    start: 26
                    end: 27
            span:
              start: 7
              end: 27
      span:
        start: 0
        end: 27
    separator: ~
