crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__missing_semicolon_warns_but_parses.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics:
  - severity: Warning
    code: E0003
    message: missing separator
    labels:
      - style: Primary
        file_id: 0
        range:
          start: 42
          end: 42
        message: "consider adding `;` here"
    notes: []
items:
  - inner:
      inner:
        Function:
          id: 0
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 4
            params:
              open:
                start: 4
                end: 5
              inner:
                - inner:
                    inner:
                      mut_span: ~
                      name:
                        inner: 2
                        span:
                          start: 5
                          end: 6
                      ty:
                        inner:
                          Identifier:
                            symbol: 3
                        span:
                          start: 8
                          end: 11
                    span:
                      start: 5
                      end: 11
                  separator: ~
              close:
                start: 11
                end: 12
            result:
              inner:
                Identifier:
                  symbol: 3
              span:
                start: 16
                end: 19
          block:
            inner:
              Block:
                statements:
                  open:
                    start: 20
                    end: 21
                  inner:
                    - inner:
                        inner:
                          LocalDefinition:
                            mut_span: ~
                            name:
                              inner: 4
                              span:
                                start: 32
                                end: 33
                            ty:
                              inner:
                                Identifier:
                                  symbol: 3
                              span:
                                start: 35
                                end: 38
                            value:
                              inner:
                                Identifier:
                                  symbol: 2
                              span:
                                start: 41
                                end: 42
                        span:
                          start: 26
                          end: 42
                      separator: ~
                    - inner:
                        inner:
                          Expression:
                            inner:
                              Identifier:
                                symbol: 4
                            span:
                              start: 47
                              end: 48
                        span:
                          start: 47
                          end: 48
                      separator: ~
                  close:
                    start: 49
                    end: 50
            span:
              start: 20
              end: 50
      span:
        start: 0
        end: 50
    separator: ~
